2005-06-23  Chris Taylor  <chris@icculus.org>

	* installation.txt: describe new directory system
	and mention recursive mission searching

2005-06-22  Chris Taylor  <chris@icculus.org>

	* main/editor/kgame.c: load .rl2 files instead of .lvl files
	(some editor info could be stored in .rdl / .rl2 files)

	* include/nocfile.h, main/cntrlcen.c, main/cntrlcen.h,
	main/fuelcen.c, main/fuelcen.h, main/game.c, main/game.h,
	main/segment.c, main/segment.h, main/switch.c, main/switch.h,
	main/wall.c, main/wall.h: add level component saving functions,
	which use PhysicsFS and are endian friendly

	* main/editor/mine.c, main/gamemine.c, main/gamemine.h:
	add function for converting descent 2 texture numbers back to
	descent 1 texture numbers

	* main/editor/mine.c, main/gamesave.c: use PhysicsFS for saving
	levels. Entirely endian friendly and allows saving of .rdl and .rl2
	files.

2005-06-14  Chris Taylor  <chris@icculus.org>

	* main/mission.c: make sure there is a path to free for D2 Demo/OEM

2005-06-13  Chris Taylor  <chris@icculus.org>

	* main/gamemine.c: convert_d1_tmap_num now returns 193 for texture
	number 198 to maintain bijectivity, when descent.pig is available
	(used to return 167, which is also returned for Descent 1 texture
	132)

	* include/physfsx.h: added PHYSFSX_writeVector,
	PHYSFSX_writeAngleVec, PHYSFSX_writeMatrix and PHYSFSX_printf

2005-04-05  Bradley Bell  <btb@icculus.org>

	* arch/linux/joystick.c, arch/sdl/joy.c, main/kconfig.c: fix some
	bugs in joystick initialization

2005-04-04  Bradley Bell  <btb@icculus.org>

	* main/kconfig.c: cosmetic fixes to joystick config screen

	* arch/dos/joyc.c, arch/include/joy.h, arch/linux/joydefs.c,
	arch/linux/joystick.c, arch/linux/include/joystick.h,
	arch/sdl/joy.c, arch/win32/joyhh.c, arch/win32/include/joy.h,
	main/kconfig.c, unused/bios/joyc.c, unused/win95/joyc.c: change
	MAX_BUTTONS to JOY_MAX_BUTTONS

	* arch/sdl/joy.c, main/kconfig.c: don't use hardcoded descriptions
	of joystick buttons/axes
